# rh_starter

./: .cache.sqlite  .env  .gitignore  Dockerfile  README.md  fetch-weather.yml  pyproject.toml
.github/workflows/: docker.yml
src/: fetchWeather.py
webapp/: Dockerfile  app.py  front-weather.yml  service.yml
webapp/templates/: index.html
work_report/: 11_4_2024.md  12_4_2024.md  4_4_2024.md  5_4_2024.md
